--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Django flatpages - {% block title %} {% endblock title %}</title>
-        
+        <title>Django flatpages - {% block title %}< {% endblock title %}</title>
+
         <!-- Favicon-->
         <!-- Core theme CSS (includes Bootstrap)-->
         <<link href="{% static 'css/styles.css' %}" rel="stylesheet" />
