--- a/templates/new_create.html
+++ b/templates/new_create.html
@@ -1,7 +1,12 @@
 {% extends 'flatpages/default.html' %}
 
 {% block content %}
-<h1>Товар</h1>
+<h2>Вы авторизовались как {{request.user.username}}</h2>-->
+<button> <a href="/accounts/logout/">Выйти</a> </button>-->
+{% if is_not_author %}
+<button> <a href="/sign/upgrade/"> Стать автором</a> </button>
+{% endif %}
+<h1>Новость</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
