--- a/templates/post.html
+++ b/templates/post.html
@@ -1,6 +1,8 @@
 {% extends 'flatpages/default.html' %}
 {% block title %}
 Post
+<h2>Вы авторизовались как {{request.user.username}}</h2>-->
+<button> <a href="/accounts/logout/">Выйти</a> </button>-->
 {% endblock title %}
 {% block content %}
    <h1>{{ post.title }}</h1>
