--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,6 +6,16 @@ Post
 {% endblock title %}
 {% block content %}
    <h1>Все новости</h1>
+   {% if request.user.username %}
+   <h2>Вы авторизовались как {{request.user.username}}</h2>-->
+   <button> <a href="/accounts/logout/">Выйти</a> </button>-->
+      {% if is_not_author %}
+      <button> <a href="/sign/upgrade/"> Стать автором</a> </button>
+      {% endif %}
+   {% else %}
+   <h2>Вы не авторизовались, нажмите для входа в аккаунт</h2>-->
+   <button> <a href="/accounts/login/">Войти</a> </button>-->
+   {% endif %}
    <h3>Количество новостей на странице: {{ posts|length }}</h3>
    <h3>{% current_time '%b %d %Y' %}</h3>
    <hr>
