--- a/templates/new_create.html
+++ b/templates/new_create.html
@@ -6,7 +6,7 @@
 {% if is_not_author %}
 <button> <a href="/sign/upgrade/"> Стать автором</a> </button>
 {% endif %}
-<h1>Новость</h1>
+<h1>Cоздать новость</h1>
 <hr>
 <form action="" method="post">
     {% csrf_token %}
